<resources>
    <string name="app_name">Taller03_CM</string>
    <string name="snackbar_dismiss_label">cerrar</string>
    <string name="home_label">Autenticado</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="signup_label">SignUp</string>
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="signout_menu_item">SignOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mail_error_label">El email no puede estar vacio.</string>
    <string name="error_pass_label">El password no puede estar vacio.</string>
    <string name="create_user_button_label">Create User</string>
    <string name="name_label">Nombre</string>
    <string name="surname_label">Apellido</string>
    <string name="create_a_new_user">Create a new User</string>
    <string name="imagenDeContacto">Imagen De Contacto</string>
    <string name="phone_label">Phone</string>
    <string name="number_id">Número de identificación</string>
    <string name="logout_menu_item">Lougout</string>
    <string name="usuarios_disponibles">Usuarios Disponibles</string>

    <!--Cámara-->
    <string name="start_camara">Camara</string>
    <string name="seleccion_imagen">Galeria</string>
    <string name="camera_intent">Camara</string>
    <string name="camerax_intent">CameraX</string>
    <string name="permission_denied_label">No pude obtener el permiso necesario</string>
    <string name="capture_saved">Imagen guardada correctamente.</string>

    <!--Mapas-->
    <string name="latitud">Latitud</string>
    <string name="latitud_opcional">Latitud (opcional)</string>
    <string name="longitud">Longitud</string>
    <string name="longitud_opcional">Longitud (opcional)</string>
    <string name="error_identification_label">Falta N. Id</string>
    <string name="error_last_label">Falta Apellido.</string>
    <string name="error_name_label">Falta Nombre.</string>

</resources>